# AgentAleph

./: .gitignore  AGENTS.md  LICENSE  PLAN-AGENTE.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
scripts/: setup-llama.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  catalog.json  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/agent/: agent_loop.rs  context.rs  grammar.rs  memory.rs  message.rs  mod.rs  permissions.rs  prompt.rs  session_store.rs  skills.rs
src-tauri/src/agent/tools/: bash.rs  edit.rs  glob.rs  grep.rs  list.rs  memory.rs  mod.rs  read_file.rs  web_fetch.rs  web_search.rs  write_file.rs
src-tauri/src/chat/: mod.rs  session.rs
src-tauri/src/inference/: mod.rs  server.rs
src-tauri/src/models/: catalog.rs  download.rs  mod.rs  store.rs
src/components/: AgentPanel.svelte  AgentView.svelte  BrandLogo.svelte  ChatView.svelte  DownloadsDropdown.svelte  DownloadsList.svelte  Icon.svelte  LocalModels.svelte  Logo.svelte  Message.svelte  ModelBrowser.svelte  ModelCard.svelte  ModelFamilyBadge.svelte  Select.svelte  SettingsView.svelte  Sidebar.svelte  StatusBar.svelte  ThemePicker.svelte  TitleBar.svelte
src/lib/: activeProject.svelte.ts  agentContext.svelte.ts  api.ts  brandMarks.ts  devMocks.ts  modelFamily.ts  theme.ts  types.ts  updater.ts
